# lib-xcore

./: .clang-format  CMakeLists.txt  INSTALL.md  README.md
benchmark/: bench_random.cpp
include/: embedded_cpp  memory.hpp  require_cpp20.hpp
include/container/: array.hpp  bitset.hpp  circular_buffer.hpp  lru_cache.hpp
include/lib/: builtins_bootstrap.hpp  macros_bootstrap.hpp  move.hpp  optional.hpp  ported_std.hpp  types.hpp
include/memory/: allocator.hpp  generic.hpp  virtual_memory.hpp
lib/: dispatcher
lib/container/: array.hpp  lru_cache.hpp
lib/core/: builtins_bootstrap.hpp  optional.hpp  ported_move.hpp  ported_std.hpp
lib/memory/: allocator.hpp  generic.hpp
lib/utils/: task_dispatcher.cpp
src/: dispatcher  embedded_cpp  lib_xcore  math_module  memory.hpp  require_cpp17.hpp
src/container/: array.hpp  bitset.hpp  byte_buffer.hpp  circular_buffer.hpp  deque.hpp  lru_cache.hpp  queue.hpp  stack.hpp  string.cpp  string.hpp
src/core/: basic_iterator.hpp  builtins_bootstrap.hpp  custom_numeric.hpp  dtostrf.cpp  dtostrf.hpp  macros_bootstrap.hpp  ported_config.hpp  ported_invoke.hpp  ported_move.hpp  ported_optional.hpp  ported_pair.hpp  ported_random.hpp  ported_refwrap.hpp  ported_std.hpp  ported_tuple.hpp  ported_type_traits.hpp  ported_variant.hpp  require_cpp17.hpp  string_format.hpp
src/internal/: macros.hpp
src/linalg/: numeric_matrix.hpp  numeric_vector.hpp
src/math/: control.hpp  imu_tools.cpp  imu_tools.hpp  integral_impl.hpp  kalman.hpp  kalman_lut.hpp  numeric_matrix.hpp  numeric_vector.hpp  standard_constants.hpp
src/memory/: allocator.hpp  bitmap_allocator.hpp  generic.hpp  virtual_memory.hpp
src/network/: nav.hpp
src/utils/: command_parser.cpp  command_parser.hpp  json.hpp  nonblocking_delay.cpp  nonblocking_delay.hpp  on_off_timer.hpp  pipeline.hpp  sampler.hpp  (+2 more)
test/: compare_kalman.cpp  test_arena.cpp  test_buffer.cpp  test_cache.cpp  test_command_parser.cpp  test_control.cpp  test_deque.cpp  test_include.cpp  test_json.cpp  test_kalman.cpp  test_kalman_dt.cpp  test_kalman_ekf.cpp  test_kalman_wrapper.cpp  test_math.cpp  test_pipeline.cpp  test_random.cpp  test_string.cpp  test_tuple.cpp  test_variant.cpp  test_vector.cpp
(+3 files in other folders)
